--- a/register.html
+++ b/register.html
@@ -11,6 +11,8 @@
           <h1 style="font-family: monospace;">hello!! Guest</h1>
           <input type="text" class="textbx" placeholder="Enter your Name" style="text-align: center;">
           <button style="display: block; margin-left: 200px; margin-top: 20px; margin-bottom: 22px;" class="btn">Enter</button>
+          <h1>hello</h1>
+          
         </div>
         
     </body>
