--- a/register.html
+++ b/register.html
@@ -12,6 +12,7 @@
           <input type="text" class="textbx" placeholder="Enter your Name" style="text-align: center;">
           <button style="display: block; margin-left: 200px; margin-top: 20px; margin-bottom: 22px;" class="btn">Enter</button>
            hey    
+           <h1>Pushpendra Sharma</h1>
         </div>
         
     </body>
