--- a/ScoreBoard.html
+++ b/ScoreBoard.html
@@ -22,9 +22,9 @@
         .container {
             border: 2px solid indianred;
             background-color: burlywood;
-            width: 550px;
+            width: 678px;
             height: 545px;
-            margin-left: 320px;
+            margin-left: 286px;
             border-radius: 18px;
             cursor: pointer;
             margin-top: -38px;
@@ -58,7 +58,7 @@
         }
         table,th,td{
             border: 2px solid burlywood;
-            margin-left: 14px;
+            margin-left: 8px;
             margin-top: 20px;
             text-align: center;
             border-radius: 10px;
@@ -77,36 +77,42 @@
                 <th>Performers</th>
                 <th>Rank</th>
                 <th>Score</th>
+                <th>Result</th>
             </tr>
 
             <tr>
                 <td> 🙍‍♂️ Pushpendra Sharma</td>
                 <td>1</td>
                 <td>10/10</td>
+                <td>Check</td>
             </tr>
 
             <tr>
                 <td> 🙍‍♂️ Pushpendra Sharma</td>
                 <td>2</td>
                 <td>7/10</td>
+                <td>Check</td>
             </tr>
 
             <tr>
                 <td> 🙍‍♂️ Pushpendra Sharma</td>
                 <td>3</td>
                 <td>6/10</td>
+                <td>Check</td>
             </tr>
 
             <tr>
                 <td> 🙍‍♂️ Pushpendra Sharma</td>
                 <td>4</td>
                 <td>5/10</td>
+                <td>Check</td>
             </tr>
 
             <tr>
                 <td> 🙍‍♂️ Pushpendra Sharma</td>
                 <td>5</td>
                 <td>4/10</td>
+                <td>Check</td>
             </tr>
         </table>
     </div>
