dilip sir presentaion

--- a/level.html
+++ b/level.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="level.css">
     <title>Select Level</title>
 </head>
-<body>
+<body style="background-color: rgb(201, 165, 201);">
     <section>
         <div class="paper">
-            <div class="question">
-                How familier you are with data structure ?
+            <div style="font-family: monospace;" class="question">
+                How familier you are with Arrays ?
             </div> 
             <br><br>
             <div class="btn">
-                <button>I'm Beginer</button><br><br><br>
-                <button>Intermidiate</button><br><br><br>
-                <button>I'm PRO</button><br>
+                <button onclick="window.location.href='Questions1.0.html'" >I'm Beginer</button><br><br><br>
+                <button onclick="window.location.href='Questions1.0.html'">Intermidiate</button><br><br><br>
+                <button onclick="window.location.href='Questions1.0.html'">I'm PRO</button><br>
             </div>
         </div>
 
