--- a/Question_page2.0.html
+++ b/Question_page2.0.html
@@ -268,6 +268,150 @@
                 </div>
                 <ul class="options">
                     <li>
+                        <input type="radio" id="a" name="ops1" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops1" />
+                        <label for="b">OPTION B</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops1" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops1" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="qs">
+                <div id="questionBox">
+                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
+                    <p id="questions">2. Some random question about some random array for which you can give some random answer????</p>
+                    <div class="aBox">
+                        <span class="array">1</span>
+                        <span class="array">2</span>
+                        <span class="array">3</span>
+                        <span class="array">4</span>
+                        <span class="array">5</span>
+                        <span class="array">6</span>
+                        <span class="array">7</span>
+                        <span class="array">8</span>
+                        <span class="array">9</span>
+                        <span class="array">10</span>
+                    </div>
+                </div>
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops2" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops2" />
+                        <label for="b">OPTION B</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops2" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops2" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="qs">
+                <div id="questionBox">
+                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
+                    <p id="questions">3. Some random question about some random array for which you can give some random answer????</p>
+                    <div class="aBox">
+                        <span class="array">1</span>
+                        <span class="array">2</span>
+                        <span class="array">3</span>
+                        <span class="array">4</span>
+                        <span class="array">5</span>
+                        <span class="array">6</span>
+                        <span class="array">7</span>
+                        <span class="array">8</span>
+                        <span class="array">9</span>
+                        <span class="array">10</span>
+                    </div>
+                </div>
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops" />
+                        <label for="b">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="qs">
+                <div id="questionBox">
+                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
+                    <p id="questions">4. Some random question about some random array for which you can give some random answer????</p>
+                    <div class="aBox">
+                        <span class="array">1</span>
+                        <span class="array">2</span>
+                        <span class="array">3</span>
+                        <span class="array">4</span>
+                        <span class="array">5</span>
+                        <span class="array">6</span>
+                        <span class="array">7</span>
+                        <span class="array">8</span>
+                        <span class="array">9</span>
+                        <span class="array">10</span>
+                    </div>
+                </div>
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops" />
+                        <label for="b">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="qs">
+                <div id="questionBox">
+                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
+                    <p id="questions">5. Some random question about some random array for which you can give some random answer????</p>
+                    <div class="aBox">
+                        <span class="array">1</span>
+                        <span class="array">2</span>
+                        <span class="array">3</span>
+                        <span class="array">4</span>
+                        <span class="array">5</span>
+                        <span class="array">6</span>
+                        <span class="array">7</span>
+                        <span class="array">8</span>
+                        <span class="array">9</span>
+                        <span class="array">10</span>
+                    </div>
+                </div>
+                <ul class="options">
+                    <li>
                         <input type="radio" id="a" name="ops" />
                         <label for="a">OPTION A</label>
                     </li>
@@ -302,7 +446,24 @@
                         <span class="array">10</span>
                     </div>
                 </div>
-
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops1" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops1" />
+                        <label for="b">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops1" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops1" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
             </div>
             <div class="qs">
                 <div id="questionBox">
@@ -321,7 +482,24 @@
                         <span class="array">10</span>
                     </div>
                 </div>
-
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops" />
+                        <label for="b">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
             </div>
             <div class="qs">
                 <div id="questionBox">
@@ -340,7 +518,24 @@
                         <span class="array">10</span>
                     </div>
                 </div>
-
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops" />
+                        <label for="b">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
             </div>
             <div class="qs">
                 <div id="questionBox">
@@ -359,83 +554,24 @@
                         <span class="array">10</span>
                     </div>
                 </div>
-
-            </div>
-            <div class="qs">
-                <div id="questionBox">
-                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
-                    <p id="questions">1. Some random question about some random array for which you can give some random answer????</p>
-                    <div class="aBox">
-                        <span class="array">1</span>
-                        <span class="array">2</span>
-                        <span class="array">3</span>
-                        <span class="array">4</span>
-                        <span class="array">5</span>
-                        <span class="array">6</span>
-                        <span class="array">7</span>
-                        <span class="array">8</span>
-                        <span class="array">9</span>
-                        <span class="array">10</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="qs">
-                <div id="questionBox">
-                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
-                    <p id="questions">1. Some random question about some random array for which you can give some random answer????</p>
-                    <div class="aBox">
-                        <span class="array">1</span>
-                        <span class="array">2</span>
-                        <span class="array">3</span>
-                        <span class="array">4</span>
-                        <span class="array">5</span>
-                        <span class="array">6</span>
-                        <span class="array">7</span>
-                        <span class="array">8</span>
-                        <span class="array">9</span>
-                        <span class="array">10</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="qs">
-                <div id="questionBox">
-                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
-                    <p id="questions">1. Some random question about some random array for which you can give some random answer????</p>
-                    <div class="aBox">
-                        <span class="array">1</span>
-                        <span class="array">2</span>
-                        <span class="array">3</span>
-                        <span class="array">4</span>
-                        <span class="array">5</span>
-                        <span class="array">6</span>
-                        <span class="array">7</span>
-                        <span class="array">8</span>
-                        <span class="array">9</span>
-                        <span class="array">10</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="qs">
-                <div id="questionBox">
-                    <input type="image" name="AudioBtn" id="AudBtn" alt="audio" src="images/audio.png">
-                    <p id="questions">1. Some random question about some random array for which you can give some random answer????</p>
-                    <div class="aBox">
-                        <span class="array">1</span>
-                        <span class="array">2</span>
-                        <span class="array">3</span>
-                        <span class="array">4</span>
-                        <span class="array">5</span>
-                        <span class="array">6</span>
-                        <span class="array">7</span>
-                        <span class="array">8</span>
-                        <span class="array">9</span>
-                        <span class="array">10</span>
-                    </div>
-                </div>
-
+                <ul class="options">
+                    <li>
+                        <input type="radio" id="a" name="ops" />
+                        <label for="a">OPTION A</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="b" name="ops" />
+                        <label for="b">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="c" name="ops" />
+                        <label for="c">OPTION C</label>
+                    </li>
+                    <li>
+                        <input type="radio" id="d" name="ops" />
+                        <label for="d">OPTION D</label>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
