--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
         <div class="box">
           <h1 style="font-family: monospace;">hello!! Guest</h1>
           <input type="text" class="textbx" placeholder="Enter your Name" style="text-align: center;">
-          <button onclick="window.location.href='level.html'"  style="display: block; margin-left: 200px; margin-top: 20px; margin-bottom: 22px;" class="btn">Enter</button>
+          <button onclick="window.location.href='learn.html'"  style="display: block; margin-left: 200px; margin-top: 20px; margin-bottom: 22px;" class="btn">Enter</button>
     </div>
        </div>
     </body>
