home page created

--- a/Questions1.0.html
+++ b/Questions1.0.html
@@ -10,7 +10,7 @@
 <body >
 	<div style="border: 2px solid white; height: 40px;margin-bottom: -50px; border-radius: 10px; margin-top: 10px; background-color: rgb(201, 165, 201);  ">
 		<span onclick="window.location.href='./register.html'" class="topn">Home</span>
-		<span class="topn">Learn</span>
+		<span class="topn">Learn</span>56
 		<span class="topn">About us</span>
 		<span onclick="window.location.href='./level.html'" class="topn">Take Quiz</span>
 		<span onclick="window.location.href='./learn.html'" class="topn">Simulation</span>
