--- a/level.html
+++ b/level.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="level.css">
     <title>Select Level</title>
 </head>
-<body style="background-color: rgb(201, 165, 201);">
-    <div style="background-color: rgb(201, 165, 201); height: 40px;margin-bottom: -50px; border-radius: 10px;  border: 2px solid white;">
+<body style="background-color: #3F485B;">
+    <div style="background-color: #3F485B; height: 40px;margin-bottom: -50px; border-radius: 10px;  border: 2px solid white;">
         <span onclick="window.location.href='./register.html'" class="topn">Home</span>
         <span class="topn">Learn</span>
         <span class="topn">About us</span>
