--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     
-    <body style=" background-color: rgb(207, 172, 207);">
+    <body style=" background-color: #3F485B;">
        
     <div class="container">
         <div class="box">
