--- a/learn.html
+++ b/learn.html
@@ -25,7 +25,7 @@
             border-radius: 10px;
             padding-left: 20px;
             padding-right: 20px;
-            background-color: rgb(170, 104, 170);
+            background-color: #151922;
             /* here */
             color: white;
             font-weight: 800;
@@ -33,7 +33,7 @@
         }
 
         .btn:hover {
-            background-color: rgb(139, 78, 139);
+            background-color: #1f2533;
             cursor: pointer;
         }
 
@@ -51,7 +51,7 @@
             width: cover;
             height: 300px;
             border-radius: 10px;
-            background-color: rgb(201, 165, 201);
+            background-color: #3F485B;
         }
 
         .textbx:focus {
@@ -71,7 +71,7 @@
         }
 
         .topn:hover {
-            background-color: rgb(139, 78, 139);
+            background-color: #262e3f;
             cursor: pointer;
             border-radius: 10px;
             color: white;
@@ -134,7 +134,7 @@
 </head>
 
 <body>
-    <div style="background-color: rgb(201, 165, 201); height: 40px;margin-bottom: -50px; border-radius: 10px;">
+    <div style="background-color: #3F485B; height: 40px;margin-bottom: -50px; border-radius: 10px;">
         <span onclick="window.location.href='./register.html'" class="topn">Home</span>
         <span class="topn">Learn</span>
         <span class="topn">About us</span>
@@ -148,7 +148,7 @@
             style="color:rgb(66, 202, 66);">10</span></h2>
     <section id="main"></section>
     <br>
-    <div style="  background-color: rgb(201, 165, 201);border-radius: 10px;height: 210px;">
+    <div style="  background-color: #3F485B;border-radius: 10px;height: 210px;">
         <div style="margin-left: 30px; padding-top: 10px; font-family: monospace; color: white;">
             <label style="font-size:x-large;">INSERTION: </label>
             <input type="text" class="textbx" id="inp" placeholder="Enter the element">
