--- a/learn.html
+++ b/learn.html
@@ -243,7 +243,7 @@
     </div>
     <br>
     <br>
-    <h2 style="text-align: center;font-family:monospace; margin-top: 30px; font-weight:800;">Total Elements:<span style="color:rgb(66, 202, 66);">10</span></h2>
+    <h2 style="text-align: center;font-family:monospace; margin-top: 30px; font-weight:800;">Total Elements:<span id="totE" style="color:rgb(66, 202, 66);">0</span></h2>
     <section id="main"></section>
     <br>
     <div style="  background-color: rgb(201, 165, 201);border-radius: 10px;height: 210px;">
