--- a/home.html
+++ b/home.html
@@ -12,10 +12,10 @@
 <body>
     <div class="navi">
         <nav>
-            <a href="#">Home</a>
+            <a href="home.html">Home</a>
             <a href="level.html">TAKE QUIZ</a>
             <a href="#">LEARN</a>
-            <a href="#">SIMULATION</a>
+            <a href="register.html">SIMULATION</a>
             <a href="about.html">ABOUT US</a>
             <div class="animation start-home"></div>
         </nav>
@@ -33,8 +33,7 @@
             <span>Y</span>
         </span>
     </div>
-    <div>
-    </div>
+    
 </body>
 
 </html>
