--- a/level.html
+++ b/level.html
@@ -8,7 +8,7 @@
     <title>Select Level</title>
 </head>
 <body style="background-color: #3F485B;">
-    <div style="background-color: #3F485B; height: 40px;margin-bottom: -50px; border-radius: 10px;  border: 2px solid white;">
+    <div style="background-color: #333f5a; height: 40px;margin-bottom: -50px; border-radius: 10px;  border: 2px solid white;">
         <span onclick="window.location.href='./register.html'" class="topn">Home</span>
         <span class="topn">Learn</span>
         <span class="topn">About us</span>
