--- a/register.html
+++ b/register.html
@@ -5,10 +5,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="home.css">
     </head>
     
     <body style=" background-color: #3F485B;">
-       
+        <div class="navi">
+            <nav>
+                <a href="home.html">Home</a>
+                <a href="register.html  ">TAKE QUIZ</a>
+                <a href="#">LEARN</a>
+                <a href="#">SIMULATION</a>
+                <a href="about.html">ABOUT US</a>
+                <div class="animation start-home"></div>
+            </nav>
+        </div>
     <div class="container">
         <div class="box">
           <h1 style="font-family: monospace;">hello!! Guest</h1>
