--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
     <div class="navi">
         <nav>
             <a href="home.html">Home</a>
-            <a href="level.html">TAKE QUIZ</a>
+            <a href="register.php">TAKE QUIZ</a>
             <a href="#">LEARN</a>
-            <a href="register.html">SIMULATION</a>
+            <a href="learn.html">SIMULATION</a>
             <a href="about.html">ABOUT US</a>
             <div class="animation start-home"></div>
         </nav>
