--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
 <body>
     <div class="about-section">
         <h1>About Us Page</h1>
-        <p>Some text about who we are and what we do.</p>
-        <p>Resize the browser window to see that this page is responsive by the way.</p>
+        <p>This web site aims to provide a  user friendly platform for user to learn about ADT-ARRAY data structure.</p>
+        
     </div>
 
     <h2 style="text-align:center">Our Team</h2>
@@ -24,9 +24,9 @@
                     <img src="images/puspa2.jpeg" alt="Jane" style="width:100%">
                     <div class="container">
                         <h2>PUSHPENDRA SHARMA</h2>
-                        <p class="title">CEO & Founder</p>
-                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>jane@example.com</p>
+                        <p class="title">CEO</p>
+                        <p>I'm an frontend developer and deploped this webside.</p>
+                        <p>pushpendrasharma@gmail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
@@ -37,9 +37,9 @@
                     <img src="images/vishwa.jpg" alt="Mike"   style="width:100%">
                     <div class="container">
                         <h2>VISHWA PRASHAD L</h2>
-                        <p class="title">Art Director</p>
+                        <p class="title">CFO</p>
                         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>mike@example.com</p>
+                        <p>vishwaprashadl@gmail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
@@ -53,12 +53,12 @@
         <div class="row">
             <div class="column">
                 <div class="card">
-                    <img src="images/vaibhav2.jpeg" alt="Jane" style="width:100%">
+                    <img src="images/vaibhav2.jpg" alt="Jane" style="width:100%">
                     <div class="container">
                         <h2>VAIBHAV </h2>
-                        <p class="title">CEO & Founder</p>
+                        <p class="title">CEO & CO-Founder</p>
                         <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>jane@example.com</p>
+                        <p>vaibhav@gmail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
@@ -69,9 +69,9 @@
                     <img src="images/photo.jpg.jpg" alt="Mike" style="width:100%">
                     <div class="container">
                         <h2>SHUBHAM SINGH</h2>
-                        <p class="title">Art Director</p>
-                        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                        <p>mike@example.com</p>
+                        <p class="title">CEO & Founder</p>
+                        <p>I'm an fullstack devloper and have a role to devlop this web page.</p>
+                        <p>shubhamsingh@gmail.com</p>
                         <p><button class="button">Contact</button></p>
                     </div>
                 </div>
