--- a/information.html
+++ b/information.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="information.css">
 </head>
 
-<body>
-    <div style="border: 2px solid white; height: 40px;margin-bottom: -50px; border-radius: 10px; margin-top: 10px; background-color: #34495e;">
+<body style="background-color: #d9d8e6;">
+    <div style="border: 2px solid; height: 40px;margin-bottom: -50px; border-radius: 10px; margin-top: 10px; background-color: #34495e;">
         <span onclick="window.location.href='./register.html'" class="topn">Home</span>
         <span class="topn">Learn</span>
         <span class="topn">About us</span>
