--- a/information.html
+++ b/information.html
@@ -10,14 +10,24 @@
 </head>
 
 <body style="background-color: #d9d8e6;">
-    <div style="border: 2px solid; height: 40px;margin-bottom: -50px; border-radius: 10px; margin-top: 10px; background-color: #34495e;">
+    <div class="navi">
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="register.php">TAKE QUIZ</a>
+            <a href="information.html">LEARN</a>
+            <a href="learn.html">SIMULATION</a>
+            <a href="about.html">ABOUT US</a>
+            <div class="animation start-home"></div>
+        </nav>
+    </div>
+    <!-- <div style="border: 2px solid; height: 40px;margin-bottom: -50px; border-radius: 10px; margin-top: 10px; background-color: #34495e;">
         <span onclick="window.location.href='./register.html'" class="topn">Home</span>
         <span class="topn">Learn</span>
         <span class="topn">About us</span>
         <span onclick="window.location.href='./level.html'" class="topn">Take Quiz</span>
         <span onclick="window.location.href='./learn.html'" class="topn">Simulation</span>
         <span class="topn">contact us</span>
-    </div><br><br>
+    </div><br><br> -->
     <header>
         <h1>ADT ARRAY</h1>
     </header>
