--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="home.html">Home</a>
             <a href="register.php">TAKE QUIZ</a>
-            <a href="#">LEARN</a>
+            <a href="information.html">LEARN</a>
             <a href="learn.html">SIMULATION</a>
             <a href="about.html">ABOUT US</a>
             <div class="animation start-home"></div>
@@ -23,17 +23,17 @@
     <div class="cont">
         <span class="back">
             <span>A</span>
-            <span>D</span>
-            <span>T</span>
-            <span>-</span>
-            <span>A</span>
-            <span>R</span>
-            <span>R</span>
-            <span>A</span>
-            <span>Y</span>
+        <span>D</span>
+        <span>T</span>
+        <span>-</span>
+        <span>A</span>
+        <span>R</span>
+        <span>R</span>
+        <span>A</span>
+        <span>Y</span>
         </span>
     </div>
-    
+
 </body>
 
 </html>
