--- a/register.html
+++ b/register.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="home.css">
-    </head>
-    
-    <body style=" background-color: #3F485B;">
-        <div class="navi">
-            <nav>
-                <a href="home.html">Home</a>
-                <a href="register.html  ">TAKE QUIZ</a>
-                <a href="#">LEARN</a>
-                <a href="#">SIMULATION</a>
-                <a href="about.html">ABOUT US</a>
-                <div class="animation start-home"></div>
-            </nav>
-        </div>
+
+<head>
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="home.css">
+</head>
+
+<body style=" background-color: #3F485B;">
+    <div class="navi">
+        <nav>
+            <a href="home.html">Home</a>
+            <a href="register.html  ">TAKE QUIZ</a>
+            <a href="information.html">LEARN</a>
+            <a href="learn.html">SIMULATION</a>
+            <a href="about.html">ABOUT US</a>
+            <div class="animation start-home"></div>
+        </nav>
+    </div>
     <div class="container">
         <div class="box">
-          <h1 style="font-family: monospace;">hello!! Guest</h1>
-          <input type="text" class="textbx" placeholder="Enter your Name" style="text-align: center;">
-          <button onclick="window.location.href='learn.html'"  style="display: block; margin-left: 200px; margin-top: 20px; margin-bottom: 22px;" class="btn">Enter</button>
+            <h1 style="font-family: monospace;">hello!! Guest</h1>
+            <input type="text" class="textbx" placeholder="Enter your Name" style="text-align: center;">
+            <button onclick="window.location.href='learn.html'" style="display: block; margin-left: 200px; margin-top: 20px; margin-bottom: 22px;" class="btn">Enter</button>
+        </div>
     </div>
-       </div>
-    </body>
+</body>
+
 </html>
