--- a/level.html
+++ b/level.html
@@ -10,8 +10,8 @@
 <body style="background-color: #3F485B;">
     <div style="background-color: #333f5a; height: 40px;margin-bottom: -50px; border-radius: 10px;  border: 2px solid white;">
         <span onclick="window.location.href='./register.html'" class="topn">Home</span>
-        <span class="topn">Learn</span>
-        <span class="topn">About us</span>
+        <span onclick="window.location.href='./information.php'" class="topn">Learn</span>
+        <span onclick="window.location.href='./about.html'"  class="topn">About us</span>
         <span onclick="window.location.href='./register.html'" class="topn">Take Quiz</span>
         <span onclick="window.location.href='./learn.html'" class="topn">Simulation</span>
         <span class="topn">contact us</span>
